<resources>
    <string name="app_name">CalcApp</string>
    <string name="ac">AC</string>
    <string name="divide">÷</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="multiple">×</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="minus">−</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="plus">+</string>
    <string name="back">↻</string>
    <string name="num_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
</resources>