<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusView"
        style="@style/Theme.CalcApp.TextView.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="end"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/resultView"
        app:layout_constraintEnd_toEndOf="@id/numpadLayout"
        app:layout_constraintStart_toStartOf="@id/numpadLayout"
        tools:text="308 × 42" />

    <TextView
        android:id="@+id/resultView"
        style="@style/Theme.CalcApp.TextView.Big"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/numpadLayout"
        app:layout_constraintEnd_toEndOf="@id/numpadLayout"
        app:layout_constraintStart_toStartOf="@id/numpadLayout"
        tools:text="12325,434" />

    <GridLayout
        android:id="@+id/numpadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAC"
            style="@style/Theme.CalcApp.Button.Action.Green"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/ac" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonInvert"
            style="@style/Theme.CalcApp.Button.Action.Green"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/invert" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAbs"
            style="@style/Theme.CalcApp.Button.Action.Green"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            style="@style/Theme.CalcApp.Button.Action.Red"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/divide" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSeven"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEight"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNine"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiple"
            style="@style/Theme.CalcApp.Button.Action.Red"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/multiple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFour"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFive"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSix"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            style="@style/Theme.CalcApp.Button.Action.Red"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOne"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTwo"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonThree"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/num_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            style="@style/Theme.CalcApp.Button.Action.Red"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginBottom="5dp"
            android:text="@string/back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonZero"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginBottom="5dp"
            android:text="@string/num_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            style="@style/Theme.CalcApp.Button.Number"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:text="@string/dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            style="@style/Theme.CalcApp.Button.Action.Red"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginBottom="5dp"
            android:text="@string/equals" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>